# cliffy

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
analysis/: analyze_cliffy.py  analyze_doclisting.py
include/: CMakeLists.txt  dictionary.hpp  doc_queries.hpp  hash_func.hpp  minimizer_digest.hpp  ms_rle_string.hpp  parse.hpp  pfp_doc.hpp  pfp_lcp_doc.hpp  pfp_lcp_doc_two_pass.hpp  ref_builder.hpp  tax_doc_queries.hpp  topk_doc_queries.hpp
src/: CMakeLists.txt  minimizer_digest.cpp  minimizer_digest_test.cpp  pfp_doc.cpp  ref_builder.cpp
